5.3: ??/??/2020
	* CORE: More improvements to the TransactionManager connection and savepoint handling.
	* CORE: Added a getInternalConnection() method to DatabaseConnection to access underlying objects.
	* CORE: Added support for ORDER BY ... NULLS FIRST and LAST.  May not be supported by all database types.
	* JDBC: Update the DB2 driver class.  Thanks to mauro-palumbo.
	* JDBC: Added support for create table if not exists for HSQLDB versions 2.3.X and greater.  Thanks to lukewhitt.

5.2: 11/14/2020
	* JDBC: Refactored the JDBC package to make it java9 compliant by moving all classes under jdbc subpackage.
	* CORE: Added support for @DatabaseField(readOnly) boolean for returning non-column fields.
	* CORE: Added @DatabaseField(fullColumnDefinition) for fully describing a column as opposed to columnDefinition.
	* CORE: Added BaseSchemaUtil to print out the schema statements necessary to create a table.
	* CORE: Added the ability for users to set a character set for byte array type.  Thanks to noordawod.
	* CORE: Added a Logger.setGlobalLogLevel(...) method to set a global filter on all log messages.
	* CORE: Moved from RETURN_GENERATED_KEYS to named columns for generated ids to be more compatible.  Thanks to Bo98.
	* CORE: Significant refactoring to make FieldType and TableInfo not depend on Dao or ConnectionSource.
	* CORE: Improved memory usage by unregistering DAOs associated to a connection source.  Thanks to bosborn.
	* CORE: Fixed problem with null field assignment causing a NPE in the resulting message.  Thanks to hrach.
	* CORE: Fixed problems with the transaction level thread-local not being handled right.  Thanks to Bo98.
	* CORE: Fixed @DatabaseField(fullColumnDefinition) which was completely broken.  Thanks to ethanmdavidson.
	* CORE: Fixed default width not being applied for BigInteger.  Thanks to Bo98.
	* CORE: Fixed the default mysql driver and made driver loading more forgiving.  Thanks to zanella.