@@ -141,7 +141,7 @@ public class UpdateBuilder<T, ID> extends StatementBuilder<T, ID> {
 			} else {
 				sb.append(',');
 			}
-			clause.appendSql(databaseType, null, sb, argList);
+			clause.appendSql(databaseType, null, sb, argList, null);
 		}
 	}
 
